[package]
name = "nateroids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
rand = "0.8.5"
iyes_perf_ui = "0.3.0"
bevy_rapier3d = { version = "0.27.0", features = ["simd-stable", "debug-render-3d"] }
bevy-inspector-egui = "0.25.1"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main" }

[features]
inspectors = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.clippy]
config-path = "clippy.toml"
