[package]
name = "nateroids"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
bevy = { version = "0.14.2", features = ["tonemapping_luts", "bevy_dev_tools"] }
rand = "0.8.5"
bevy_rapier3d = { version = "0.27.0", features = ["simd-stable", "debug-render-3d"] }
leafwing-input-manager = "0.15.1"
#
# todo: rust question - bevy-inspector-egui explicilty asks for the "manage-clipboard" feature from bevy_egui
#                       however this feature breaks the wasm build so that i have to disable it
#                       as follows - IMO this is unnessary because i've configured bevy-inspector-egui
#                       code to not compile in release with #[cfg(debug_assertions)] but i want to be able
#                       to just cargo run and get dev stuff and cargo build --release --target wasm32-unknown-unknown
#                       without the extra rigamarole...is there a better way to do this?
# RUSTFLAGS="--cfg=web_sys_unstable_apis" cargo build --release --target wasm32-unknown-unknown
#
bevy-inspector-egui = "0.27.0"
strum = { version = "0.26", features = ["derive"] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.clippy]
config-path = "clippy.toml"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
